<resources>
    <string name="app_name">GGIOT</string>
    <string name="string_title_activity_base">BaseActivity</string>
    <string name="string_title_activity_splash">SplashActivity</string>
    <string name="string_test">这是一段测试文本</string>

    <string name="string_toast_lack_permission">缺少权限</string>
    <string name="string_dialog_title_help">帮助</string>
    <string name="string_dialog_content_lack_permission">程序缺少必要的权限，请单击【确定】按钮进行设置！</string>
    <string name="string_dialog_positiveButton">确定</string>
    <string name="string_dialog_negativeButton">取消</string>
    <string name="string_countDownButton_disable">s后重发</string>
    <string name="string_countDownButton_nomal">验证码</string>

    <string name="string_title_activity_login">登 录</string>
    <string name="string_count_hint_activity_login">手机号或邮箱地址</string>
    <string name="string_password_hint_activity_login">8~16位密码</string>
    <string name="string_login_activity_login">登录</string>
    <string name="string_forget_password_activity_login">忘记密码？</string>
    <string name="string_quick_register_activity_login">快速注册</string>
    <string name="string_quick_login_other_activity_login">使用其他账号快速登录</string>

    <string name="string_title_activity_register">注册</string>
    <string name="string_count_hint_activity_register">手机号或邮箱地址</string>
    <string name="string_verify_hint_activity_register">获取验证码</string>
    <string name="string_password_hint_activity_register">8~16位密码</string>
    <string name="string_confirm_hint_password_activity_register">确认密码</string>
    <string name="string_register_activity_register">注册</string>

    <string name="string_title_activity_retrieve_pass">找回密码</string>
    <string name="string_count_hint_activity_retrieve_pass">手机号或邮箱地址</string>
    <string name="string_verify_hint_activity_retrieve_pass">获取验证码</string>
    <string name="string_password_hint_activity_retrieve_pass">8~16位密码</string>
    <string name="string_confirm_hint_password_activity_retrieve_pass">确认密码</string>
    <string name="string_retrieve_activity_retrieve_pass">找回密码</string>




</resources>