<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_activity_login_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dimen_margin_activity_login"
        android:layout_marginRight="@dimen/dimen_margin_activity_login">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <com.daydreamer.ggiot.view.DengFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_title_activity_login"
            android:textColor="@color/colorTextMainLoginActivity"
            android:textSize="@dimen/dimen_text_size_title_activity_login" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_account_activity_login_register"
                android:layout_marginRight="@dimen/dimen_margin_padding_activity_login"/>

            <com.daydreamer.ggiot.view.DengFontClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_clear_activity_login_register"
                android:hint="@string/string_count_hint_activity_login"
                android:textColorHint="@color/colorTextAssistantLoginActivity"
                android:textColor="@color/colorTextMainLoginActivity"
                android:textSize="@dimen/dimen_text_size_edit_activity_login"
                android:lines="1"
                android:theme="@style/ClearEditTextTheme"
                android:paddingLeft="@dimen/dimen_margin_padding_activity_login" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_password_activity_login_register"
                android:layout_marginRight="@dimen/dimen_margin_padding_activity_login"/>

            <com.daydreamer.ggiot.view.DengFontClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_clear_activity_login_register"
                android:hint="@string/string_password_hint_activity_login"
                android:textColorHint="@color/colorTextAssistantLoginActivity"
                android:textColor="@color/colorTextMainLoginActivity"
                android:textSize="@dimen/dimen_text_size_edit_activity_login"
                android:theme="@style/ClearEditTextTheme"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimen_margin_padding_activity_login"
                android:lines="1"
                android:maxLength="16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <com.daydreamer.ggiot.view.DengFontButton
            android:id="@+id/dengFontButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_activity_login_register"
            android:text="@string/string_login_activity_login"
            android:textColor="@drawable/textcolor_button_activity_login_register"
            android:textSize="@dimen/dimen_text_size_main_activity_login"
            android:layout_marginRight="@dimen/dimen_margin_padding_activity_login"
            android:layout_marginLeft="@dimen/dimen_margin_padding_activity_login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_margin_padding_activity_login"
            android:layout_marginLeft="@dimen/dimen_margin_padding_activity_login">
            <com.daydreamer.ggiot.view.DengFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/string_forget_password_activity_login"
                android:textSize="@dimen/dimen_text_size_edit_activity_login"
                android:textColor="@color/colorTextMainLoginActivity"
                />
            <com.daydreamer.ggiot.view.DengFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/string_quick_register_activity_login"
                android:textColor="@color/colorTextMainLoginActivity"
                android:textSize="@dimen/dimen_text_size_edit_activity_login"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <com.daydreamer.ggiot.view.DengFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_quick_login_other_activity_login"
            android:textColor="@color/colorTextAssistantLoginActivity"
            android:textSize="@dimen/dimen_text_size_edit_activity_login"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="@dimen/dimen_margin_padding_activity_login"
            android:layout_marginLeft="@dimen/dimen_margin_padding_activity_login">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_qq_activity_login"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_wechat_activity_login"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_weibo_activity_login"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
</FrameLayout>