<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background_activity_login_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dimen_margin_activity_retrieve_pass"
        android:layout_marginRight="@dimen/dimen_margin_activity_retrieve_pass">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <com.daydreamer.ggiot.view.DengFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_title_activity_retrieve_pass"
                android:textColor="@color/colorTextMainLoginActivity"
                android:textSize="@dimen/dimen_text_size_title_activity_retrieve_pass"
                android:layout_centerInParent="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_back_activity_register_retrieve"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_account_activity_login_register"
                android:layout_marginRight="@dimen/dimen_margin_padding_activity_retrieve_pass"/>

            <com.daydreamer.ggiot.view.DengFontClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_clear_activity_login_register"
                android:hint="@string/string_count_hint_activity_register"
                android:textColorHint="@color/colorTextAssistantRetrievePassActivity"
                android:textColor="@color/colorTextMainRetrievePassActivity"
                android:textSize="@dimen/dimen_text_size_edit_activity_retrieve_pass"
                android:lines="1"
                android:theme="@style/ClearEditTextTheme"
                android:paddingLeft="@dimen/dimen_margin_padding_activity_retrieve_pass" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_verify_activity_register"
                android:layout_marginRight="@dimen/dimen_margin_padding_activity_retrieve_pass"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.daydreamer.ggiot.view.DengFontEditText
                    android:id="@+id/id_editText_verify_activity_retrieve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_verify_hint_activity_retrieve_pass"
                    android:textColorHint="@color/colorTextAssistantRetrievePassActivity"
                    android:textColor="@color/colorTextMainRetrievePassActivity"
                    android:textSize="@dimen/dimen_text_size_edit_activity_retrieve_pass"
                    android:lines="1"
                    android:theme="@style/ClearEditTextTheme"
                    android:paddingLeft="@dimen/dimen_margin_padding_activity_retrieve_pass"
                    android:maxLength="6"/>
                <com.daydreamer.ggiot.view.DengFontCountDownButton
                    android:layout_width="@dimen/dimen_button_size_verfiy_activity_retrieve_pass"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_alignRight="@id/id_editText_verify_activity_retrieve"
                    android:text="@string/string_countDownButton_nomal"
                    android:textSize="@dimen/dimen_text_size_verfiy_activity_retrieve_pass"
                    android:textColor="@drawable/textcolor_button_verfiy_activity_register_retrieve"
                    android:background="@drawable/background_button_verfiy_activity_register_retrieve"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_password_activity_login_register"
                android:layout_marginRight="@dimen/dimen_margin_padding_activity_retrieve_pass"/>

            <com.daydreamer.ggiot.view.DengFontClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_clear_activity_login_register"
                android:hint="@string/string_password_hint_activity_retrieve_pass"
                android:textColorHint="@color/colorTextAssistantRetrievePassActivity"
                android:textColor="@color/colorTextMainRetrievePassActivity"
                android:textSize="@dimen/dimen_text_size_edit_activity_retrieve_pass"
                android:lines="1"
                android:theme="@style/ClearEditTextTheme"
                android:paddingLeft="@dimen/dimen_margin_padding_activity_retrieve_pass"
                android:maxLength="16"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_password_activity_login_register"
                android:layout_marginRight="@dimen/dimen_margin_padding_activity_retrieve_pass"/>

            <com.daydreamer.ggiot.view.DengFontClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/icon_clear_activity_login_register"
                android:hint="@string/string_confirm_hint_password_activity_retrieve_pass"
                android:textColorHint="@color/colorTextAssistantRetrievePassActivity"
                android:textColor="@color/colorTextMainRetrievePassActivity"
                android:textSize="@dimen/dimen_text_size_edit_activity_retrieve_pass"
                android:lines="1"
                android:theme="@style/ClearEditTextTheme"
                android:paddingLeft="@dimen/dimen_margin_padding_activity_retrieve_pass"
                android:maxLength="16"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <com.daydreamer.ggiot.view.DengFontButton
            android:id="@+id/dengFontButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_activity_login_register"
            android:text="@string/string_retrieve_activity_retrieve_pass"
            android:textColor="@drawable/textcolor_button_activity_login_register"
            android:textSize="@dimen/dimen_text_size_main_activity_login"
            android:layout_marginRight="@dimen/dimen_margin_padding_activity_login"
            android:layout_marginLeft="@dimen/dimen_margin_padding_activity_login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"/>
    </LinearLayout>
</FrameLayout>